modified BookController.java, BookService.java, BookServiceImpl.java, pom.xml, ci.yml